Added an icon and logging

--- a/EngineMonitor/Info.plist
+++ b/EngineMonitor/Info.plist
@@ -63,7 +63,7 @@
 			<key>NSUbiquitousContainerIsDocumentScopePublic</key>
 			<true/>
 			<key>NSUbiquitousContainerName</key>
-			<string>logs</string>
+			<string>EngineMonitor/logs</string>
 			<key>NSUbiquitousContainerSupportedFolderLevels</key>
 			<string>Any</string>
 		</dict>
